# stm32-blink

./: Cargo.toml  README.md  memory.x
src/: lib.rs  main.rs
tests/: tests.rs
